# BookCheck

./: .gitignore  README.md  api_client.py  database.py  main.py  pyproject.toml  requirements.txt  scanner.py  sync.sh
tests/: test_workflow.py
